test/corpus/heredocs
================================================================================
Non-quoted heredoc
================================================================================
print(<<TINGS, 'other content');
this is just $content
  TINGS here (or even \nTINGS here) does not end it\
TINGS
<<\RAW;
This type does no $interp
RAW
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (function_call_expression
      (function)
      (list_expression
        (heredoc_token)
        (string_literal))))
  (heredoc_content
    (scalar
      (varname))
    (escape_sequence)
    (escape_sequence)
    (heredoc_end))
  (expression_statement
    (heredoc_token))
  (heredoc_content
    (heredoc_end)))

================================================================================
Quoted heredocs
================================================================================
<<  "$STOP";
please $STOP doing \\ silly things
$STOP
<<  '  CRAZY';
you'd think this is just
CRAZY, but you'd be \n $wrong
  CRAZY
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (heredoc_token))
  (heredoc_content
    (scalar
      (varname))
    (escape_sequence)
    (heredoc_end))
  (expression_statement
    (heredoc_token))
  (heredoc_content
    (heredoc_end)))

================================================================================
Command heredocs
================================================================================
<< `BASH`;
:(){ :|:& };:
BASH
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (command_heredoc_token))
  (heredoc_content
    (heredoc_end)))

================================================================================
Indented heredocs
================================================================================
<<~SIMPLE;
   This is indented
   SIMPLE
<<~    "QUOTED";
    Guess what?
    This $works, too!
    QUOTED
<<~\LOLWUT
    And apparently, this $monstrosity works, too
    LOLWUT
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (heredoc_token))
  (heredoc_content
    (heredoc_end))
  (expression_statement
    (heredoc_token))
  (heredoc_content
    (scalar
      (varname))
    (heredoc_end))
  (expression_statement
    (heredoc_token))
  (heredoc_content
    (heredoc_end)))

================================================================================
Insane heredocs
================================================================================
<<'WUT\'\n?';
this is intersting
WUT'\n?
<<"WHY?$CUZ";
 WHY?$CUZ
WHY?$CUZ
--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (heredoc_token))
  (heredoc_content
    (heredoc_end))
  (expression_statement
    (heredoc_token))
  (heredoc_content
    (scalar
      (varname))
    (heredoc_end)))
